FusionForge 6.1.1:
* Widget User Page: fix owner test to ensure the user is the owner of the layout.
* fix [#903]: scmhook commitEmail for scmhg broken

FusionForge 6.1:
* Accounts: minimum password length is now 8 (Sylvain Beucler)
* Accounts: add minimal constraints to password (upper-case, lower-case, non-alphanumeric check) [#826] (Inria)
* Core System: support object association n-n, bidirectional (Artifact, Document, FRSRelease) (TrivialDev)
* Docman: limit number of returned documents on search query. Use paging system [#794] (TrivialDev)
* Docman: limit search using from & to dates [#798] (TrivialDev)
* Docman: use standard search engine: unify results between 'search in project' & search in the docs tab (TrivialDev)
* Docman: searchengine: DocsAll & Docs unified. (TrivialDev)
* Docman: searchengine: add edit file action on result. (TrivialDev)
* Docman: notify users on document. (TrivialDev)
* Docman: support private directory. (TrivialDev)
* Docman: support document versioning. (TrivialDev)
* Docman: support cross ref. forum, documents, task or artifact. (TrivialDev)
* Docman: add new document review feature. to review version, document and post comment to a document. (TrivialDev)
* Docman: add manual upload method to inject zip feature. (TrivialDev)
* Forge CLI: add dump/import functions to extract or import massively into FusionForge [#848]
* FRS: link package release to tracker roadmap. (TrivialDev)
* Install System: add support for OpenSuSE. [#849] (Ralf Habacker)
* Layout: new dynamic quickNav menu: based on user activity to select 5 more visited projects (TrivialDev)
* Plugin AuthBuiltin: add captcha after 3 attempts with the same login [#795] (TrivialDev)
* Plugin AuthLDAP: support X_FORWARD_USER to delegate authentication and then retrieve user from LDAP (TrivialDev)
* Plugin Blocks: support Markdown syntax. (TrivialDev)
* Plugin GlobalActivity: forge-wide aggregation for project activities (Roland Mas)